--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -3,10 +3,11 @@
 body{
   background-color: #EEEEEE;
   box-sizing: border-box;
+  padding-top: 70px;
 }
 /** HEADER **/
 #header-nav {
-  background-color: #22AADD;
+  background-color: #8866aa;
   border-radius: 0;
   border: 0;
   color: #222222;
@@ -84,6 +85,7 @@ section {
   padding-bottom: 10px;
   
 }
+
 
 .container {
   margin-right: auto;
