--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -4,6 +4,17 @@ body{
   background-color: #EEEEEE;
   box-sizing: border-box;
 }
+
+.content{
+  border: 1px solid black;
+  background-color: #88BBEE;
+  margin: 5px;
+  padding-bottom: 10px;
+}
+
+#main-content{
+  padding-bottom: 20px;
+}
 /** HEADER **/
 #header-nav {
   background-color: #8866aa;
